k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: questboard
  labels:
    name: questboard
    environment: production
